@@ -16,7 +16,7 @@
  *  along with this program; if not, write to the Free Software
  *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
-/* $Id: partlist.h,v 1.21 2003/08/25 11:56:07 ekohl Exp $
+/* $Id: partlist.h,v 1.22 2003/10/06 19:22:42 chorns Exp $
  * COPYRIGHT:       See COPYING in the top level directory
  * PROJECT:         ReactOS text-mode setup
  * FILE:            subsys/system/usetup/partlist.h
@@ -133,6 +133,9 @@ DestroyPartitionList (PPARTLIST List);
 
 VOID
 DrawPartitionList (PPARTLIST List);
+
+VOID
+SelectPartition(PPARTLIST List, ULONG DiskNumber, ULONG PartitionNumber);
 
 VOID
 ScrollDownPartitionList (PPARTLIST List);
